--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+	<ul>
+		<li><%= link_to 'logout', destroy_user_session_path, method: :delete %></li>
+		<li><%= link_to 'go home', root_path %></li>
+	</ul>
+</header>
+
 
 <%= yield %>
 
