--- a/app/views/usermoods/index.html.erb
+++ b/app/views/usermoods/index.html.erb
@@ -2,3 +2,5 @@
 
 <h3><%= @mood %></h3>
 <h3><%= @all_moods_average %></h3>
+
+<h4><%= link_to 'edit mood', edit_usermood_path(current_user) %></h4>
