--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <header>
 	<ul>
 		<li><%= link_to 'logout', destroy_user_session_path, method: :delete %></li>
-		<li><%= link_to 'go home', root_path %></li>
+		<li><%= link_to 'go home', usermoods_path %></li>
 	</ul>
 </header>
 
