--- a/app/views/usermoods/new.html.erb
+++ b/app/views/usermoods/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(@mood) do |f| %>
 	<div class="field">
 		<%= f.label :rating %><br>
-		<%= f.text_field :rating %>
+		<%= f.range_field :rating, in: 1..100 %>
 	</div>
 	<div class="field">
 		<%= f.label :message %><br>
