--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,29 @@
+<section class="form">
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+	  <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+	  <%= f.label :email %>
+	  <%= f.email_field :email, autofocus: true %>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+	  <br>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+	  <%= f.label :password %>
+	  <%= f.password_field :password, autocomplete: "off" %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+	  <br>
+
+	  <%= f.label :password_confirmation %>
+	  <%= f.password_field :password_confirmation, autocomplete: "off" %>
+
+	  <br>
+	  <br>
+
+	  <%= f.submit "Sign up" %>
+	<% end %>
 
 <%= render "devise/shared/links" %>
+
+</section>
