--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mood</title>
+  <title>MoodKiwi</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<header>
-	<ul>
-		<li><%= link_to 'logout', destroy_user_session_path, method: :delete %></li>
-		<li><%= link_to 'go home', usermoods_path %></li>
-	</ul>
-</header>
-
-
+	<div class="container">
 <%= yield %>
-
+	</div>
 </body>
 </html>
