--- a/app/views/usermoods/show.html.erb
+++ b/app/views/usermoods/show.html.erb
@@ -1,3 +1,11 @@
+<header>
+	<div class="logout">
+		<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+	</div>
+	<div class="home">
+		<%= link_to image_tag("http://zesprikiwi.com/wp-content/uploads/2011/06/zespri11.jpg"), usermoods_path %>
+	</div>
+</header>
 <h1>Current Mood</h1>
 <%= @mood.rating %><br>
 <%= @mood.message %><br>
