changed the database to postgres

--- a/app/views/launch.html.erb
+++ b/app/views/launch.html.erb
@@ -1,27 +1,19 @@
+
+<html>
 <head>
-	<title>How do we feel?</title>
-	<h3>Let's find out.</h3>
+	<link rel="stylesheet" type="text/css" href="/launch.css">
+	<title>MoodKiwi</title>
 </head>
-
 <body>
+<a href="http://i.imgur.com/I7O3Zsu.png"></a>
 
-<div class="container">
-  <div class="logo">
-    <a href="http://i.imgur.com/I7O3Zsu.png" /></a>
-  </div>
+<button><a href="/signup">SIGN UP</a></button>
 
-  <div class="signup">
-    <button><a href="/signup">Sign Up</a></button>
-  </div>
-  <br>
-  <div class="login">
-    <a href="/login">Already have an account?</a>
-  </div>
-
-</div>
+<button><a href="/login">login</a></button>
 
 <footer>
-<small>Copyright MoodKiwi, Inc.  2014</small>
+	<small>© Blimp, inc. 2014</small>
 </footer>
 
 </body>
+</html>
