--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -39,3 +39,35 @@ a {
 	color: black;
 	font-size: 12px; 
 }
+
+input[type="range"] 
+  -webkit-appearance: none !important /*Needed to reset default slider styles */
+  width: 100%
+  height: 30px
+  background:
+    color: #C2C2C2
+  margin: auto
+  transition: all 0.3s ease
+
+
+   
+  &:hover 
+    background-color: #B6B6B6
+
+  
+input[type="range"]::-webkit-slider-thumb 
+  -webkit-appearance: none !important  
+  width: 20px
+  height: 30px
+  background:
+    color: black
+  darken(black, 15%)
+  transition: all 0.5s ease
+
+  
+  &:hover
+    background:
+      color: darken(black, 10%)  
+  
+  &:active
+  darken(black, 15%)
