--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,46 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<header>
+
+  <%= link_to image_tag("http://i.imgur.com/I7O3Zsu.png"), usermoods_path %>
+
+  <div class="user-nav">
+  
+    <div class="logout">
+      <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+    </div>
+
+    <div class="settings">
+      <%= link_to 'Settings', edit_user_registration_path %>
+    </div>
+
+</header>
+
+<h2>Edit Your Account</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div><%= f.label :email %>
   <%= f.email_field :email, autofocus: true %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+<div><%= f.label :current_password %>
+    <%= f.password_field :current_password, autocomplete: "off" %></div>
+
+  <div><%= f.label :password, 'New Password' %>
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :password_confirmation, 'New Password Confirmation' %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+    <br>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+  <br>
+  <br>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<p>Do you want to  <%= link_to "delete your account?", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
