--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,8 +21,10 @@
 	  <br>
 	  <br>
 
-	  <%= f.submit "Sign up" %>
+	  <%= f.submit "Enter" %>
 	<% end %>
+
+	<br>
 
 <%= render "devise/shared/links" %>
 
