--- a/app/views/usermoods/index.html.erb
+++ b/app/views/usermoods/index.html.erb
@@ -1,15 +1,28 @@
 <header>
-	<div class="logout">
-		<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-	</div>
-	<div class="home">
-		<%= link_to image_tag("http://i.imgur.com/I7O3Zsu.png"), usermoods_path %>
-	</div>
+
+	<%= link_to image_tag("http://i.imgur.com/I7O3Zsu.png"), usermoods_path %>
+
+	<div class="user-nav">
+	
+		<div class="logout">
+			<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+		</div>
+
+		<div class="settings">
+			<%= link_to 'Settings', edit_user_registration_path %>
+		</div>
+
 </header>
 
-<div class="mood-info">
-	<h3>Current Mood: <%= @mood %> | Average: <%= @all_moods_average %></h3>
+<div class="content">
+
+	<h4><em>(there will be an interactive mood chart in this box)</em></h4>
+
+	<h1>Current Mood: <%= @mood %> | Average: <%= @all_moods_average %></h1>
+
 </div>
 
-<div class="edit"><%= link_to image_tag("http://i.imgur.com/HcTTXfB.png"), edit_usermood_path(current_user) %>
+<div class="nav-bar">
+<%= link_to image_tag("http://i.imgur.com/rY87M5n.png"), usermoods_path %>
+<%= link_to image_tag("http://i.imgur.com/HcTTXfB.png"), edit_usermood_path(current_user) %>
 </div>
