--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -9,6 +9,10 @@ label {
   font-size: 12px;
 }
 
+input:focus{
+  outline: 0;
+}
+
 form input[type="email"],
 form input[type="password"] {
 	
@@ -24,8 +28,21 @@ form input[type="password"] {
   box-sizing: border-box;
 }
 
-input[type="checkbox"] {
+/*input[type="checkbox"] {
 	display: inline-block;
+}*/
+
+form .remember-check {
+  margin-right: -108px;
+}
+
+form .check-box {
+  display: inline-block;
+}
+
+form .remember-me {
+  margin-left: -40px;
+  display: inline-block;
 }
 
 input[type="submit"] {
@@ -40,34 +57,54 @@ a {
 	font-size: 12px; 
 }
 
-input[type="range"] 
-  -webkit-appearance: none !important /*Needed to reset default slider styles */
-  width: 100%
-  height: 30px
-  background:
-    color: #C2C2C2
-  margin: auto
-  transition: all 0.3s ease
+input[type="range"] {
+  -webkit-appearance: none !important;
+  border-radius: 8px;
+  width: 60%;
+  height: 10px;
+  background-color: white;
+  margin: auto;
+  }
 
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;  
+  border-radius: 5px;
+  width: 20px;
+  height: 30px;
+  background-color: black;
+  border: 4px solid white;
+}
 
-   
-  &:hover 
-    background-color: #B6B6B6
+input[type="text"] {
+  height: 40px;
+  width: 300px;
+  font-size: 15px;
+  font-weight: lighter;
+  color: black;
+  padding-left: 10px;
+}
 
-  
-input[type="range"]::-webkit-slider-thumb 
-  -webkit-appearance: none !important  
-  width: 20px
-  height: 30px
-  background:
-    color: black
-  darken(black, 15%)
-  transition: all 0.5s ease
+input[type="image"]
+{
+  width: 40px;
+  height: 40px;
+  opacity: 0.5;
+}
 
-  
-  &:hover
-    background:
-      color: darken(black, 10%)  
-  
-  &:active
-  darken(black, 15%)
+input[type="image"]:hover
+{
+  opacity: 1;
+}
+
+h3 {
+  font-weight: lighter;
+}
+
+h4 {
+  font-weight: lighter;
+}
+
+form h3 {
+  color: white;
+  font-weight: lighter;
+}
