--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -6,49 +6,87 @@ body {
   font-family: Helvetica;
 }
 
+/* Header */
+
 header {
   overflow: hidden;
   background-color: transparent;
   position: fixed;
+  height: 82px;
   top: 0px;
   width: 100%;
+  padding: 15px;
 }
 
-header .logout a {
-  
-  font-size: 14px;
+.user-nav {
+  z-index: 1;
+  position: relative;
   float: right;
-  height: 50;
-  width: 90;
-  padding-right: 20px;
-  padding-top: 22px;
-  padding-bottom: 5px;
-
+  margin-right: 29px;
+  background-color: white;
+  background:rgba(255,255,255,0.2);
+  width: 140px;
+  height: 30px;
+  border-radius: 10px;
 }
 
-header .home img {
+.logout a {
+  z-index: 2;
+  position: relative;
+  float: right;
+  margin-right: 20px;
+  margin-top: 10px;
+  font-size: 12;
+}
+
+.settings a {
+  z-index: 2;
+  position: relative;
+  float: right;
+  margin-right: 20px;
+  margin-top: 10px;
+  font-size: 12;
+}
+
+header img {
   
-  width: 50px;
-  height: 50px;
-  float: left;
-  height: 50;
-  width: 90;
-  padding-left: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  position: fixed;
+  width: 85px;
+  height: 85px; 
+  left: 50%;
+  margin-left: -43px;
 }
 
-.mood-info {
-	margin-top: 230px;
+/*Content*/
+
+.content {
+  background-color: #FAEBD7;
+  background:rgba(255,255,255,0.4);
+  height: 180px;
+  width: 65%;
+  margin: 0 auto;
+  padding: 80px;
+  border-radius: 30px;
 }
 
-.container img {
-	width: 50px;
-	height: 20px;
+.nav-bar {
+  margin-top: 30px;
 }
 
-input[type="image"]
-{
-  width: 50px;
-  height: 20px;
+.nav-bar img {
+	width: 80px;
+	height: 30px;
+  margin-right: 6px;
+  margin-left: 6px;
+  opacity: 0.5;
 }
+
+.nav-bar img:hover {
+  opacity: 1;
+}
+
+.rating-box {
+  margin-top: 200px;
+}
+/* Input Types */
+
