--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -64,6 +64,7 @@ input[type="range"] {
   height: 10px;
   background-color: white;
   margin: auto;
+  background:rgba(255,255,255,0.6);
   }
 
 input[type="range"]::-webkit-slider-thumb {
